# EchoNexus

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  README.md  vcpkg.json
.zed/: settings.json
benchmarks/: GUIDE.md
benchmarks/src/: cli.ts  load.ts
benchmarks/tests/: oha.test.ts
cmake/: ConfigureWithCompilerEnv.cmake
example/: CMakeLists.txt
example/src/: main.cpp
include/: core.hpp  handler.hpp  serve.hpp
include/middlewares/: cors.hpp  router.hpp
include/types/: handler.hpp  request.hpp  response.hpp
include/utils/: parse.hpp
lib/: core.cpp  core.h
lib/types/: handler.hpp  request.hpp  response.hpp
src/: core.cpp  handler.cpp  serve.cpp
src/middlewares/: cors.cpp  router.cpp
src/types/: handler.cpp
tests/: CMakeLists.txt  GUIDE.md
